--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Innovative NSU</title>
-  </head>
-  <body>
-    <div id='root'></div>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Campus Events</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Campus Events</h1>
+    </header>
+    <main>
+        <section id="search-section">
+            <input type="text" id="searchInput" placeholder="Search for events...">
+            <button onclick="searchEvents()">Search</button>
+        </section>
+        <section id="events-list"></section>
+    </main>
+    <footer>
+        <p>&copy; 2025 Campus Events System</p>
+    </footer>
+    <script src="script.js"></script>
+</body>
 </html>
